crates/churl/tests/snapshots/tui_snapshot__request_tab_body_browse_search_active_keeps_focused_chrome.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: rendered
---
┌ Explorer ──────────────────┐  Create user                                     
│  ▸ orders                  │┌ URL ───────────────────────────────────────────┐
│  ▾ users                   ││POST  https://api.test/users                    │
│    List users              │└────────────────────────────────────────────────┘
│>   Create user             │┏ Request ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│    Get user                │┃‹  [2] Headers(1)     [3] Auth     [4] Body     ┃
│                            │┃  type: json  (b to change)                     ┃
│                            │┃1 {                                             ┃
│                            │┃2   "name": "Ada"                               ┃
│                            │┃3 }                                             ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│                            │┌ Response ──────────────────────────────────────┐
│                            ││no response yet                                 │
│                            ││POST https://api.test/users                     │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
└────────────────────────────┘│                                                │
┌ Sequences ─────────────────┐│                                                │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 /Ada    1 matches                                                              
 REQUEST · demo · ? help · space leader · / search · : palette
