crates/churl/tests/snapshots/tui_snapshot__request_tab_body_edit_then_browse_shows_typed_content.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 1070
expression: rendered
---
┌ Explorer ──────────────────┐  Create user ●                                   
│  ▸ orders                  │┌ URL ───────────────────────────────────────────┐
│  ▾ users                   ││POST  https://api.test/users                ●   │
│    List users              │└────────────────────────────────────────────────┘
│>   Create user ●           │┏ Request ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│    Get user                │┃‹  [2] Headers(1)     [3] Auth     [4] Body     ┃
│                            │┃  type: json  (b to change)                     ┃
│                            │┃1 // {"name": "Ada"}                            ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│                            │┌ Response ──────────────────────────────────────┐
│                            ││no response yet                                 │
│                            ││POST https://api.test/users                     │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
└────────────────────────────┘│                                                │
┌ Sequences ─────────────────┐│                                                │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 REQUEST · demo · ● unsaved · w save · ? help · space leader · / search · : pale
