crates/churl/tests/snapshots/tui_snapshot__request_tab_body_multipart_parts_editor.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐  List users ●                                    
│  ▸ orders                  │┌ URL ───────────────────────────────────────────┐
│  ▾ users                   ││GET  https://api.test/users                 ●   │
│>   List users ●            │└────────────────────────────────────────────────┘
│    Create user             │┏ Request ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│    Get user                │┃‹  [3] Auth     [4] Body(2)                     ┃
│                            │┃  type: multipart  (enter to change)            ┃
│                            │┃  field [text] = hello                          ┃
│                            │┃> upload [file] =                               ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│                            │┌ Response ──────────────────────────────────────┐
│                            ││no response yet                                 │
│                            ││GET https://api.test/users                      │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
└────────────────────────────┘│                                                │
┌ Sequences ─────────────────┐│                                                │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 REQUEST · demo · ● unsaved · w save · ? help · space leader · / search · : pale
