crates/churl/tests/snapshots/tui_snapshot__request_tab_headers.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 922
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐  Create user                                     
│  ▸ orders                  │┌ URL ───────────────────────────────────────────┐
│  ▾ users                   ││POST  https://api.test/users                    │
│    List users              │└────────────────────────────────────────────────┘
│>   Create user             │┏ Request ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│    Get user                │┃  [1] Params(0)     [2] Headers(1)   ›          ┃
│                            │┃> ✓ Content-Type: application/json              ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│                            │┌ Response ──────────────────────────────────────┐
│                            ││no response yet                                 │
│                            ││POST https://api.test/users                     │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
└────────────────────────────┘│                                                │
┌ Sequences ─────────────────┐│                                                │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 REQUEST · demo · ? help · space leader · / search · : palette
