crates/churl/tests/snapshots/tui_snapshot__request_tab_params.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│  ▾ api                     ││GET  https://api.test/search                    │
│>   Search                  │└────────────────────────────────────────────────┘
│                            │┏ Request ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│                            │┃ Params(2)   Headers(0)   Auth   Body           ┃
│                            │┃> ✓ q = rust                                    ┃
│                            │┃  ✗ page = 1                                    ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│                            │┌ Response ──────────────────────────────────────┐
│                            ││no response yet                                 │
│                            ││GET https://api.test/search                     │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 REQUEST · demo · j/k move · enter select · ctrl-s send · w save · f jump · / se
