crates/churl/tests/snapshots/tui_snapshot__response_cursor_moves_with_j_and_shows.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│                            │┌ Request ───────────────────────────────────────┐
│                            ││                                                │
│                            ││no endpoint selected                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            │└────────────────────────────────────────────────┘
│                            │┏ Respons 200 OK · 142 ms · 22 B · 1 header  [h] ┓
│                            │┃{                                               ┃
│                            │┃  "a": 1,                                       ┃
│                            │┃  "b": 2                                        ┃
│                            │┃}                                               ┃
│                            │┃                                                ┃
└────────────────────────────┘┃                                                ┃
┌ Sequences ─────────────────┐┃                                                ┃
│<leader>s a to add          │┃                                                ┃
└────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 RESPONSE · demo · ? help · space leader · / search · : palette
