crates/churl/tests/snapshots/tui_snapshot__response_fold_renders_ellipsis_marker.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: rendered
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│                            │┌ Request ───────────────────────────────────────┐
│                            ││                                                │
│                            ││no endpoint selected                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            │└────────────────────────────────────────────────┘
│                            │┏ Respons 200 OK · 142 ms · 32 B · 1 header  [h] ┓
│                            │┃1 { ⋯ 4 lines                                   ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
└────────────────────────────┘┃                                                ┃
┌ Sequences ─────────────────┐┃                                                ┃
│<leader>s a to add          │┃                                                ┃
└────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 RESPONSE · demo · ? help · space leader · / search · : palette
