crates/churl/tests/snapshots/tui_snapshot__response_pane_failed.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│                            │┌ Request ───────────────────────────────────────┐
│                            ││                                                │
│                            ││no endpoint selected                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            │└────────────────────────────────────────────────┘
│                            │┏ Response ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│                            │┃request failed                                  ┃
│                            │┃error:                                          ┃
│                            │┃request failed: error sending request           ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
└────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 RESPONSE · demo · j/k move · enter select · ctrl-s send · f jump · / search · :
