crates/churl/tests/snapshots/tui_snapshot__response_pane_in_flight.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│                            │┌ Request ───────────────────────────────────────┐
│                            ││                                                │
│                            ││no endpoint selected                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            │└────────────────────────────────────────────────┘
│                            │┏ Response ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│                            │┃sending… [N] ms · ctrl-c to cancel             ┃
│                            │┃⠋ waiting for response…                         ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
└────────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 RESPONSE · demo · j/k move · enter select · ctrl-s send · f jump · / search · :
